Fix top level spacing on projects page

--- a/_sass/_project_card.scss
+++ b/_sass/_project_card.scss
@@ -1,6 +1,6 @@
 .project-card {
   width: 50%;
-  margin: 50px auto;
+  margin: 0 auto 50px auto;
   background-color: $base-highlight;
   box-shadow: 0 25px 33px -25px #616161;
   color: $text-color-dark;
